Added checkpoints functionality to all algorithms

--- a/src/Main.ipynb
+++ b/src/Main.ipynb
@@ -1182,7 +1182,7 @@
     "print(\"Started PSO\")\n",
     "\n",
     "# Run PSO\n",
-    "shortest_route = pso.run()\n",
+    "shortest_route, checkpoints = pso.run()\n",
     "\n",
     "# Print time taken\n",
     "print(\"Time taken: \" + str((int(round(time.time() * 1000)) - start_time) / 1000.0))\n",
@@ -1297,7 +1297,7 @@
     "print(\"Started FA\")\n",
     "\n",
     "# Run FA\n",
-    "shortest_route = fa.run()\n",
+    "shortest_route, checkpoints = fa.run()\n",
     "\n",
     "# Print time taken\n",
     "print(\"Time taken: \" + str((int(round(time.time() * 1000)) - start_time) / 1000.0))\n",
@@ -1495,7 +1495,7 @@
     "print(\"Started FA\")\n",
     "\n",
     "# Run GD-FF\n",
-    "shortest_route = ga.run()\n",
+    "shortest_route, checkpoints = ga.run()\n",
     "\n",
     "# Print time taken\n",
     "print(\"Time taken: \" + str((int(round(time.time() * 1000)) - start_time) / 1000.0))\n",
