Renamed some methods for consistency

--- a/src/Main.ipynb
+++ b/src/Main.ipynb
@@ -189,7 +189,7 @@
     "print(\"Started ACO\")\n",
     "\n",
     "# Run ACO\n",
-    "shortest_route, checkpoints = aco.find_shortest_route(spec, print_progress=True)\n",
+    "shortest_route, checkpoints = aco.run(spec, print_progress=True)\n",
     "\n",
     "# Print time taken\n",
     "print(\"Time taken: \" + str((int(round(time.time() * 1000)) - start_time) / 1000.0))\n",
@@ -763,7 +763,7 @@
     "\n",
     "# Start ACO Algorithm\n",
     "aco = AntColonyOptimization(aco_environment, aco_agents_per_generation, aco_no_generations, aco_q, aco_evaporation, new_convergence_iter, aco_no_change_iter, trail, aco_sigma_elite, num_processes=6)\n",
-    "shortest_route, checkpoints = aco.find_shortest_route(spec)\n",
+    "shortest_route, checkpoints = aco.run(spec)\n",
     "\n",
     "plt.plot([1, 3, 5, 7, 10, 20, 30, 40, 50], checkpoints)\n",
     "plt.xlabel(\"Generations\")\n",
@@ -845,7 +845,7 @@
     "print(\"Started ACO\")\n",
     "\n",
     "# Run ADPE ACO\n",
-    "shortest_route, checkpoints = adpe_aco.find_shortest_route(spec, print_progress=True)\n",
+    "shortest_route, checkpoints = adpe_aco.run(spec, print_progress=True)\n",
     "\n",
     "# Print time taken\n",
     "print(\"Time taken: \" + str((int(round(time.time() * 1000)) - start_time) / 1000.0))\n",
