Renamed 'Route' to 'Path', removed some remaining mentions of Gaussian Firefly, and other minor changes

--- a/src/Main.ipynb
+++ b/src/Main.ipynb
@@ -188,19 +188,19 @@
     "print(\"Started ACO\")\n",
     "\n",
     "# Run ACO\n",
-    "shortest_route, checkpoints = aco.run(spec, print_progress=True)\n",
+    "shortest_path, checkpoints = aco.run(spec, print_progress=True)\n",
     "\n",
     "# Print time taken\n",
     "print(\"Time taken: \" + str((int(round(time.time() * 1000)) - start_time) / 1000.0))\n",
     "\n",
     "# Save solution\n",
-    "# shortest_route.write_to_file(\"./../data/hard_solution.txt\")\n",
+    "# shortest_path.write_to_file(\"./../data/hard_solution.txt\")\n",
     "\n",
-    "# Print route size\n",
-    "print(\"Route size: \" + str(shortest_route.size()))\n",
+    "# Print path size\n",
+    "print(\"Path size: \" + str(shortest_path.size()))\n",
     "\n",
-    "# Print route path\n",
-    "aco_environment.visualize(shortest_route)"
+    "# Print path\n",
+    "aco_environment.visualize(shortest_path)"
    ],
    "outputs": [
     {
@@ -762,11 +762,11 @@
     "\n",
     "# Start ACO Algorithm\n",
     "aco = AntColonyOptimization(aco_environment, aco_agents_per_generation, aco_no_generations, aco_q, aco_evaporation, new_convergence_iter, aco_no_change_iter, trail, aco_sigma_elite, num_processes=6)\n",
-    "shortest_route, checkpoints = aco.run(spec)\n",
+    "shortest_path, checkpoints = aco.run(spec)\n",
     "\n",
     "plt.plot([1, 3, 5, 7, 10, 20, 30, 40, 50], checkpoints)\n",
     "plt.xlabel(\"Generations\")\n",
-    "plt.ylabel(\"Route size\")\n",
+    "plt.ylabel(\"Path size\")\n",
     "plt.title(\"Speed of convergence for medium environment\")\n",
     "plt.show()"
    ],
@@ -844,19 +844,19 @@
     "print(\"Started ACO\")\n",
     "\n",
     "# Run ADPE ACO\n",
-    "shortest_route, checkpoints = adpe_aco.run(spec, print_progress=True)\n",
+    "shortest_path, checkpoints = adpe_aco.run(spec, print_progress=True)\n",
     "\n",
     "# Print time taken\n",
     "print(\"Time taken: \" + str((int(round(time.time() * 1000)) - start_time) / 1000.0))\n",
     "\n",
     "# Save solution\n",
-    "# shortest_route.write_to_file(\"./../data/hard_solution.txt\")\n",
+    "# shortest_path.write_to_file(\"./../data/hard_solution.txt\")\n",
     "\n",
-    "# Print route size\n",
-    "print(\"Route size: \" + str(shortest_route.size()))\n",
+    "# Print path size\n",
+    "print(\"Path size: \" + str(shortest_path.size()))\n",
     "\n",
-    "# Print route path\n",
-    "aco_environment.visualize(shortest_route)"
+    "# Print path\n",
+    "aco_environment.visualize(shortest_path)"
    ],
    "outputs": [
     {
@@ -1181,20 +1181,20 @@
     "print(\"Started PSO\")\n",
     "\n",
     "# Run PSO\n",
-    "shortest_route, checkpoints = pso.run()\n",
+    "shortest_path, checkpoints = pso.run()\n",
     "\n",
     "# Print time taken\n",
     "print(\"Time taken: \" + str((int(round(time.time() * 1000)) - start_time) / 1000.0))\n",
     "\n",
     "# Save solution\n",
-    "# shortest_route.write_to_file(\"./../data/hard_solution.txt\")\n",
+    "# shortest_path.write_to_file(\"./../data/hard_solution.txt\")\n",
     "\n",
-    "# Print route size; not really relevant for pso as it adds global bests and may get stuck for a bit\n",
+    "# Print path size; not really relevant for pso as it adds global bests and may get stuck for a bit\n",
     "# Normally measured in path length or time taken better\n",
-    "print(\"Route size: \" + str(shortest_route.size()))\n",
+    "print(\"Path size: \" + str(shortest_path.size()))\n",
     "\n",
-    "# Print route path\n",
-    "environment.visualize(shortest_route)"
+    "# Print path\n",
+    "environment.visualize(shortest_path)"
    ],
    "outputs": [
     {
@@ -1311,20 +1311,20 @@
     "print(\"Started FA\")\n",
     "\n",
     "# Run FA\n",
-    "shortest_route, checkpoints = fa.run()\n",
+    "shortest_path, checkpoints = fa.run()\n",
     "\n",
     "# Print time taken\n",
     "print(\"Time taken: \" + str((int(round(time.time() * 1000)) - start_time) / 1000.0))\n",
     "\n",
     "# Save solution\n",
-    "# shortest_route.write_to_file(\"./../data/hard_solution.txt\")\n",
+    "# shortest_path.write_to_file(\"./../data/hard_solution.txt\")\n",
     "\n",
-    "# Print route size\n",
+    "# Print path size\n",
     "# Normally measured in path length or time taken better\n",
-    "print(\"Route size: \" + str(shortest_route.size()))\n",
+    "print(\"Path size: \" + str(shortest_path.size()))\n",
     "\n",
-    "# Print route path\n",
-    "environment.visualize(shortest_route)"
+    "# Print path\n",
+    "environment.visualize(shortest_path)"
    ],
    "outputs": [
     {
