--- a/src/Main.ipynb
+++ b/src/Main.ipynb
@@ -161,9 +161,8 @@
    },
    "cell_type": "code",
    "source": [
-    "# Construct the optimization objects\n",
-    "aco_environment = ACOEnvironment.create_from_environment(environment)\n",
-    "aco = AntColonyOptimization(aco_environment, aco_agents_per_generation, aco_no_generations, aco_q, aco_evaporation, convergence_iter, aco_no_change_iter, trail, step_size, num_processes=6)"
+    "# Construct the optimization object\n",
+    "aco = AntColonyOptimization(environment, aco_agents_per_generation, aco_no_generations, aco_q, aco_evaporation, convergence_iter, aco_no_change_iter, trail, step_size, num_processes=6)"
    ],
    "outputs": [],
    "execution_count": 5
@@ -200,7 +199,7 @@
     "print(\"Path size: \" + str(shortest_path.size()))\n",
     "\n",
     "# Print path\n",
-    "aco_environment.visualize(shortest_path)"
+    "environment.visualize(shortest_path)"
    ],
    "outputs": [
     {
@@ -719,10 +718,10 @@
     "aco_sigma_elite = 50\n",
     "\n",
     "# Create environment\n",
-    "aco_environment.reset()\n",
+    "environment.reset()\n",
     "\n",
     "# Start ACO Algorithm\n",
-    "aco = AntColonyOptimization(aco_environment, aco_agents_per_generation, aco_no_generations, aco_q, aco_evaporation, new_convergence_iter, aco_no_change_iter, trail, aco_sigma_elite, num_processes=6)\n",
+    "aco = AntColonyOptimization(environment, aco_agents_per_generation, aco_no_generations, aco_q, aco_evaporation, new_convergence_iter, aco_no_change_iter, trail, aco_sigma_elite, num_processes=6)\n",
     "shortest_path, checkpoints = aco.run(spec)\n",
     "\n",
     "plt.plot([1, 3, 5, 7, 10, 20, 30, 40, 50], checkpoints)\n",
@@ -779,8 +778,7 @@
    "cell_type": "code",
    "source": [
     "# Construct the optimization objects\n",
-    "aco_environment = ACOEnvironment.create_from_environment(environment)\n",
-    "adpe_aco = AdpeAntColonyOptimization(aco_environment, aco_agents_per_generation, aco_no_generations, aco_q, aco_evaporation, convergence_iter, aco_no_change_iter, trail, aco_sigma_elite, step_size, num_processes=6)"
+    "adpe_aco = AdpeAntColonyOptimization(environment, aco_agents_per_generation, aco_no_generations, aco_q, aco_evaporation, convergence_iter, aco_no_change_iter, trail, aco_sigma_elite, step_size, num_processes=6)"
    ],
    "outputs": [],
    "execution_count": 8
@@ -817,7 +815,7 @@
     "print(\"Path size: \" + str(shortest_path.size()))\n",
     "\n",
     "# Print path\n",
-    "aco_environment.visualize(shortest_path)"
+    "environment.visualize(shortest_path)"
    ],
    "outputs": [
     {
